--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@supabase/supabase-js": "^2.54.0",
     "@tailwindcss/vite": "^4.1.11",
     "isbot": "^5.1.27",
+    "luxon": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.7.1",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
